line graph transition

--- a/templates/index.html
+++ b/templates/index.html
@@ -213,7 +213,7 @@
 			//d3.select("#myCheckboxOrig").on("change",updateOrig_scree);
 			//d3.select("#myCheckboxRand").on("change",updateRand_scree);
 			//d3.select("#myCheckboxStrat").on("change",updateStrat_scree);
-			drawLineGraph();
+			drawInitialLineGraph();
 		});
 		
 		/*d3.select("#pcaScatterPlot").on('click', function(){
