--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 	  <script src="../static/d3/jquery-3.2.1.min.js"></script>
 	  <script src="../static/lineGraph.js"></script>
 	   <script src="../static/parallelCoordinates.js"></script>
-	   <script src="../static/bubble.js"></script>
+	   <script src="../static/bubble1.js"></script>
 	  <script src="../static/mdsScatter.js"></script>
 	  <script src="../static/slider.js"></script>
       <!--script src="../static/pcaScatter.js"></script>
