--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 	  <script src="../static/d3/jquery-3.2.1.min.js"></script>
 	  <script src="../static/lineGraph.js"></script>
 	   <script src="../static/parallelCoordinates.js"></script>
-	   <script src="../static/bubble1.js"></script>
+	   <script src="../static/bubble.js"></script>
 	  <script src="../static/mdsScatter.js"></script>
 	  <script src="../static/multithumb-slider.js"></script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
