--- a/templates/index.html
+++ b/templates/index.html
@@ -72,10 +72,15 @@
         </div>
       </div>
       <div class="graph-class">
-        <div id="dcm-div" class="dcm-class"></div>
-        <div id="line-div" class="line-class"></div>
-        <div id="parallel-div" class="parallel-class"></div>
-        <div id="bubble-div" class="bubble-class"></div>
+          <div class="graph-class-left">
+              <div id="dcm-div" class="dcm-class"></div>
+          </div>
+          <div class="graph-class-right">
+              <div id="parallel-div" class="parallel-class"></div>
+              <div id="line-div" class="line-class"></div>
+            <div id="bubble-div" class="bubble-class"></div>
+          </div>
+
       </div>
       <script type="text/javascript">
           drawInitialParallelGraph();
