--- a/templates/index.html
+++ b/templates/index.html
@@ -83,6 +83,7 @@
 
       </div>
       <script type="text/javascript">
+		  var textColor = "#e5e5e5";
           drawInitialParallelGraph();
           bubble_test();
           drawMDSscatter("euclidean");
