--- a/templates/index.html
+++ b/templates/index.html
@@ -26,27 +26,27 @@
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 100px;">
-    <img id="minOverallQual"
-         src="../static/min-arrow.png"
-         role="slider"
-         tabindex="0"
-         class="min thumb"
-         aria-valuemin="1"
-         aria-valuenow="1"
-         aria-valuemax="10">
-    <img id="maxOverallQual"
-         src="../static/max-arrow.png"
-         role="slider"
-         tabindex="0"
-         class="max thumb"
-         aria-valuemin="1"
-         aria-valuenow="10"
-         aria-valuemax="10">
-  </div>
+            <img id="minOverallQual"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1"
+                aria-valuenow="1"
+                aria-valuemax="10">
+            <img id="maxOverallQual"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1"
+            aria-valuenow="10"
+            aria-valuemax="10">
+            </div>
             <div class="rail-label max">10</div>
             </div>
           </div>
-        <div class="slider-component">SalePrice
+          <div class="slider-component">SalePrice
             <div class="aria-widget-slider">
             <div class="rail-label min">0</div>
             <div class="rail" style="width: 100px;">
@@ -70,17 +70,114 @@
             <div class="rail-label max">10</div>
             </div>
         </div>
+          <div class="slider-component">Lot Area
+            <div class="aria-widget-slider">
+            <div class="rail-label min">0</div>
+            <div class="rail" style="width: 100px;">
+            <img id="minLotArea"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1300"
+                aria-valuenow="1300"
+                aria-valuemax="115149">
+            <img id="maxLotArea"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1300"
+            aria-valuenow="115149"
+            aria-valuemax="115149">
+            </div>
+            <div class="rail-label max">115149</div>
+            </div>
+          </div>
+          <div class="slider-component">Lot Area
+            <div class="aria-widget-slider">
+            <div class="rail-label min">0</div>
+            <div class="rail" style="width: 100px;">
+            <img id="minLotArea"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1300"
+                aria-valuenow="1300"
+                aria-valuemax="115149">
+            <img id="maxLotArea"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1300"
+            aria-valuenow="115149"
+            aria-valuemax="115149">
+            </div>
+            <div class="rail-label max">115149</div>
+            </div>
+          </div>
+          <div class="slider-component">Lot Area
+            <div class="aria-widget-slider">
+            <div class="rail-label min">0</div>
+            <div class="rail" style="width: 100px;">
+            <img id="minLotArea"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1300"
+                aria-valuenow="1300"
+                aria-valuemax="115149">
+            <img id="maxLotArea"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1300"
+            aria-valuenow="115149"
+            aria-valuemax="115149">
+            </div>
+            <div class="rail-label max">115149</div>
+            </div>
+          </div>
+          <div class="slider-component">Lot Area
+            <div class="aria-widget-slider">
+            <div class="rail-label min">0</div>
+            <div class="rail" style="width: 100px;">
+            <img id="minLotArea"
+                src="../static/min-arrow.png"
+                role="slider"
+                tabindex="0"
+                class="min thumb"
+                aria-valuemin="1300"
+                aria-valuenow="1300"
+                aria-valuemax="115149">
+            <img id="maxLotArea"
+            src="../static/max-arrow.png"
+            role="slider"
+            tabindex="0"
+            class="max thumb"
+            aria-valuemin="1300"
+            aria-valuenow="115149"
+            aria-valuemax="115149">
+            </div>
+            <div class="rail-label max">115149</div>
+            </div>
+          </div>
       </div>
-      <div class="graph-class">
+      <div class="graph-class-top">
           <div class="graph-class-left">
               <div id="dcm-div" class="dcm-class"></div>
           </div>
           <div class="graph-class-right">
-              <div id="parallel-div" class="parallel-class"></div>
-              <div id="line-div" class="line-class"></div>
-            <div id="bubble-div" class="bubble-class"></div>
+               <div id="line-div" class="line-class"></div>
+                <div id="bubble-div" class="bubble-class"></div>
           </div>
-
+      </div>
+      <div class="graph-class-bottom">
+              <div id="parallel-div" class="parallel-class"></div>
       </div>
       <script type="text/javascript">
 		  var textColor = "#e5e5e5";
